feat: get user sessions
