# internal/delivery/http/router/user_route.go
@@ -16,9 +16,9 @@ func UserRoutes(v1 fiber.Router, u user_service.UserService, t system_service.To
 	user := v1.Group("/users")
 
 	user.Get("/", m.Auth("getUsers"), userController.GetUsers)
+	user.Get("/session", m.Auth("getUserSession"), userController.GetUserSession)
 	user.Post("/", m.Auth("manageUsers"), userController.CreateUser)
 	user.Get("/:userId", m.Auth("getUsers"), userController.GetUserByID)
 	user.Patch("/:userId", m.Auth("manageAcc"), userController.UpdateUser)
 	user.Delete("/:userId", m.Auth("manageUsers"), userController.DeleteUser)
-
 }
